--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -45,7 +45,7 @@
         background: #7d8c8400;
       }
       .backgroundmain {
-        background: #7d8c84;
+        background: #2b6777;
       }
       
       @font-face {
@@ -179,7 +179,7 @@
     
         <!-- Footer -->
       <footer class="d-flex mt-auto mx-auto text-center text-black-50 ">
-        <p>&copy;<a href="https://www.Test2Impress.be/" class="text-black">Test2Impress</a> - {% now "Y" %}</p>
+        <p class="text-white">&copy;<a href="https://www.Test2Impress.be/" class="text-white text-decoration-none">Test2Impress</a> - {% now "Y" %}</p>
       </footer>
     </div>
 
