--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -1,245 +1,253 @@
+{% extends 'base.html' %}
+{% block content %}
 
 <!doctype html>
 <html lang="en">
-  <head>
-    {% load static %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Test2Impress">
-    <title>Test2Impress - About</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
+<head>
+  {% load static %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Test2Impress">
+  <title>Test2Impress - About</title>
 
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
+
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <!-- FontAwesome Kit -->
+  <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
+  <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+  <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
+  <meta name="theme-color" content="#7952b3">
+
+
+  <style>
+    .bgbody {
+      background-color: #52ab98;
+    }
     
-
-    <!-- Bootstrap core CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-<!-- FontAwesome Kit -->
-<script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
-
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#7952b3">
-
-
-    <style>
-    
-/* Backgroundcolors */
-    
-    .bglightyellow {
-        background: #eff2d8;
-      }
-
-    .bgyellow {
-        background: #d4d9c1;
-      }
-   
-    .bggreen {
-        background: #7d8c84;
-      }
-
-    .bgblue {
-        background: #2c3540;
-      }
-    
-    .bgdarkblue {
-        background: #04050d;
-      }
-    
-    .bgblack {
-        background: black;
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
     }
 
-/* Textcolors */
-    .lightyellow {
-        color:#eff2d8;
-    }
-
-    .yellow {
-        color:#d4d9c1;
-    }
-
-    .green {
-        color:#7d8c84;
-    }
-
-    .blue {
-        color:#2c3540;
-    }
-
-    .darkblue {
-        color:#04050d;
-    }
-
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
       }
+    }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    
-/*Elements*/
+    /*Elements*/
 
     .button {
-      color:#04050d;
-      background-color:#eff2d8;
-      border-color:#2c3540;
+      color: #04050d;
+      background-color: #eff2d8;
+      border-color: #2c3540;
       box-shadow: 2px 5px 5px #2c3540;
     }
 
     .button:hover {
-      color:#04050d;
-      background-color:#d4d9c1 ;
-      border-color:#2c3540;
+      color: #04050d;
+      background-color: #d4d9c1;
+      border-color: #2c3540;
       box-shadow: 5px 15px 20px #2c3540;
     }
 
     .button:active {
-      color:#eff2d8;
-      background-color:#2c3540 ;
-      border-color:#2c3540;
+      color: #eff2d8;
+      background-color: #2c3540;
+      border-color: #2c3540;
       box-shadow: 5px 15px 20px #eff2d8;
       filter: saturate(150%);
       transform: translateY(3px);
     }
 
     .button:focus {
-      color:#04050d;
-      background-color:#d4d9c1 ;
-      border-color:#7d8c84;
+      color: #04050d;
+      background-color: #d4d9c1;
+      border-color: #7d8c84;
       box-shadow: 5px 15px 20px #2c3540;
     }
 
     .cardborder {
-      border-style: solid;
-      border-width: 3px;
-      border-color: #d4d9c1;
       box-shadow: 20px 20px 15px #2c3540;
-      float:right;
-    }
-
-    .navbarshadow {
-      box-shadow: 0px 10px 10px #000000a2;
+      float: right;
     }
 
     .cardimgyourweb {
       height: 45vh;
-      object-fit:cover;
-      position:relative;
-      filter:blur(2px)
+      object-fit: cover;
+      position: relative;
+      filter: blur(2px)
     }
 
     .cardimg {
       height: 15vh;
-      object-fit:contain;
+      object-fit: contain;
       max-width: auto;
       max-height: 100%;
-      float:left;
+      float: left;
       padding-right: 15px;
     }
 
     .afooter {
-        color: #111;
-      }
-    
-    .afooter:visited {
-        color: #111;
-      }
-    
-    .afooter:hover {
-        color: #111;
-      }
-    
-    .logoinpage {
-      padding:3rem;
+      color: #111;
+      text-decoration: none;
     }
-    </style>
-  </head>
-  <body class="bggreen">
-    
-<header>
-    <nav class="navbar navbarshadow px-5 navbar-expand-lg bgdarkblue navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'menu' %}"><img class="navbarlogo px-3" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Start</a>
-                    <a class="nav-link px-2" href="{% url 'menu' %}">Overview</a>
-                    <a class="nav-link px-2" href="{% url 'test'%}#bottom">Testing</a>
-                    <a class="nav-link px-2" href="{% url 'web'%}">Websites</a>
-                    <a class="nav-link active px-2" href="{% url 'who'%}">Contact</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-</header>
 
-<main>
+    .afooter:visited {
+      color: #111;
+      text-decoration: none;
+    }
+
+    .afooter:hover {
+      color: #111;
+    }
+
+    .logoinpage {
+      padding: 3rem;
+    }
+
+    .bgphoto {
+      background:#032b44;
+    }
+
+    .photo{
+      position:relative;
+      top: 0%;
+      left: 0%;
+      display: block;
+    }
+
+      .photo img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: grayscale(100%) contrast(120%);
+        box-shadow: 10px 15px 25px 0 rgba(0,0,0,.2);
+        display: block;
+        transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+        margin-top: 10px;
+      }
+
+      .photo:hover img{
+        box-shadow: 1px 1px 10px 0 rgba(0,0,0,.1);
+      }
+
+      .photo .glow-wrap{
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        margin-top: -10px;
+      }
+
+      .photo .glow{
+        display: block;
+        position:absolute;
+        width: 40%;
+        height: 100%;
+        background: rgba(255,255,255,.2);
+        top: 0;
+        filter: blur(5px);
+        transform: rotate(45deg) translate(-450%, 0);
+        transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
+
+      .photo:hover .glow{
+        transform: rotate(45deg) translate(450%, 0);
+        transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
+
+      .photo:hover img,
+      .photo:hover .glow-wrap{
+        margin-top: 0;
+      }
+
+  </style>
+</head>
+
+<body class="bgbody">
   {% for who in whos.all %}
   <main>
-    <div class="container py-4">
- 
+    <div class="bgbody container py-4">
+
       <div class="p-5 py-1 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
-          <iframe class="cardborder"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d627.8007141151722!2d3.8844257020263466!3d50.99392343470661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c39efecf302eef%3A0xca8459ef3f927eb4!2sEsdoornlaan%209%2C%209230%20Wetteren!5e0!3m2!1snl!2sbe!4v1641034294162!5m2!1snl!2sbe" width="400" height="300" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe class="cardborder"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2506.849373243747!2d3.7271666159130907!3d51.07433055009507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3712618725cc7%3A0xd536d97ba53cccd!2sOslostraat%209%2C%209000%20Gent!5e0!3m2!1snl!2sbe!4v1643126836897!5m2!1snl!2sbe"
+            width="600" height="375" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe>
           <h1 class="display-5 fw-bold">Contact us</h1>
-          <br/>
+          <br />
           <p class="col-md-8 fs-4"><i class="fas fa-envelope"></i> : {{who.whoemail}}</p>
-          <br/>
+          <br />
           <p class="col-md-8 fs-4"><i class="fas fa-phone"></i> : {{who.whophone}}</p>
-          <br/>
-          <p class="col-md-8 fs-4"><i class="fas fa-map-marker-alt"></i>  : {{who.whoaddress}}</p>
-          <br/>
+          <br />
+          <p class="col-md-8 fs-4"><i class="fas fa-map-marker-alt"></i> : {{who.whoaddress}}</p>
+          <br />
+          <p class="col-md-8 fs-4"><a class="d-xl-inline afooter" target="_blank" href="https://www.linkedin.com/in/pieter-de-geyndt/"><i class="fab fa-linkedin-in"></i> : LinkedIn </p></a>
         </div>
       </div>
-  
+
       <div class="row align-items-md-stretch">
-        <div class="col-md-6">
-          <div class="h-100 p-5 text-white bg-dark rounded-3">
+        <div class="col-md-6 fs-5">
+          <div class="h-100 p-5 text-white bgphoto rounded-3">
             <img class="img-fluid cardimg my-0" src="{{ who.whoimage.url }}"></img>
-            <h2>{{who.whofirstname}} {{who.wholastname}}</h2>
-            <p>{{ who.whobody | linebreaks }}</p>
-            <a class="btn btn-outline-light" target="_blank" href="https://www.linkedin.com/in/pieter-de-geyndt/"type="button"><i class="fab fa-linkedin-in"></i></a>
+            <h2 class="fs-1">{{who.whofirstname}} {{who.wholastname}}</h2>
+            <p class="lead">{{ who.whobody | linebreaks }}</p>
           </div>
         </div>
+
         <div class="col-md-6">
-          <div class="h-100 p-5 bg-light border rounded-3">
-            <h2> Certificates</h2>
-            <p>{{ who.whocertifications | linebreaks }}</p>
-            <h2> Resume <a class="afooter" target="_blank" href="{{ who.whocv.url }}"><i class="bi bi-file-pdf"></i></a>
-            <br/>
-            <img class="img-fluid logoinpage my-0" src="{% static 'Webistebg.gif'%}"></img>
+          <div class="fs-5 h-auto p-5 bg-light border rounded-3">
+            <h2>Certificates</h2>
+            <p class="lead"><b>{{ who.whocertifications | linebreaksbr }}</b></p>
+            <br />
+            <a class="d-xl-inline afooter" target="_blank" href="{{ who.whocv.url }}">
+              <h2 class="d-xl-inline">Resume </h2>
+              <br />
+              <i class="fs-1 d-xl-inline text-danger bi bi-file-pdf"></i>
+            </a>
+            <br />
+            <br />
           </div>
+          <!--<img class="h-auto img-fluid logoinpage my-0" src="{% static 'Webistebg.gif'%}"></img>-->
+          
+          <!--Copy-->
+          <div class="bglogo">
+          <a href="{% url 'home' %}" class="photo">
+            <!--<h1>{{home.title}}</h1> -->
+              <img class="img-fluid" src="{% static 'Webistebg.gif'%}" />
+            <div class="glow-wrap">
+              <i class="glow"></i>
+            </div>
+          </a>
+        </div>
+          <!--Einde copy-->
         </div>
       </div>
-        {% endfor %}
-</main>
-
-<!--Footer -->
-<a href="{% url 'test' %}#top"><i id="buttontotop"class="button-totop fas fa-angle-double-up"></i></a>
-<footer class="d-flex justify-content-center bgdarkblue text-white-50">
-  <p>&copy;<a href="https://www.Test2Impress.be/" class="afooter text-white">Test2Impress</a> - {% now "Y" %}.</p>
-</footer>
-
-    <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-      
-  </body>
+      {% endfor %}
+  </main>
+</body>
+  <!-- Scripts -->
+  <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
 </html>
+{% endblock %}
