Alternative for imagehome

--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -170,7 +170,7 @@
       <!-- Page -->
       <a href="{% url 'menu' %}" class="photo">
         <!--<h1>{{home.title}}</h1> -->
-          <img src="{{home.background.url}}" />
+          <img src="{{home.background.url}}" alt="Achtergrond" />
         <div class="glow-wrap">
           <i class="glow"></i>
         </div>
