--- a/Test2Impress/templates/base.html
+++ b/Test2Impress/templates/base.html
@@ -7,21 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Test2Impress - Overview of our services">
     <meta name="author" content="Test2Impress">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-16x16.png">
 
     <title>Test2Impress</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/product/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbar-static/">
 
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- Bootstrap core CSS -->
+    <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/4.0/examples/product/product.css" rel="stylesheet">
+          <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/5.1/examples/navbar-static/navbar-top.css" rel="stylesheet">
 
-    <!-- FontAwesome Kit -->
-    <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
     <style>
 
         /* Navbar */
@@ -56,6 +53,20 @@
         .afooter:hover {
             color: #111;
         }
+
+        .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
     </style>
 </head>
 {% url 'home' as home_url %}
@@ -66,10 +77,8 @@
 <body>
     <nav class="navbar navbarbg navbarshadow px-5 navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="fs-2 navbar-brand" href="{% url 'home' %}"><img class="navbarlogo px-3"
-                    src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="fs-2 navbar-brand" href="{% url 'home' %}"><img class="navbarlogo px-3" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -92,22 +101,25 @@
     </footer>
 </body>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-<script src="https://getbootstrap.com/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="../../assets/js/vendor/popper.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<script src="../../assets/js/vendor/holder.min.js"></script>
-<script>
+<!-- Scripts -->
+  <!-- Bootstrap core JavaScript
+      ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://getbootstrap.com/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://getbootstrap.com/assets/js/vendor/holder.min.js"></script>
+<!-- FontAwesome Kit -->
+  <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
+  <script>
     Holder.addTheme('thumb', {
-        bg: '#55595c',
-        fg: '#eceeef',
-        text: 'Thumbnail'
+      bg: '#55595c',
+      fg: '#eceeef',
+      text: 'Thumbnail'
     });
+  </script>
+<!-- einde -->
     
 </script>
 </html>
