--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -5,20 +5,21 @@
     {% load static %}
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Test2Impress - Overview of our services">
     <meta name="author" content="Test2Impress">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
     <title>Test2Impress - Overview</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/product/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/product/">
 
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 
     <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/4.0/examples/product/product.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.1/examples/product/product.css" rel="stylesheet">
 
     <!-- FontAwesome Kit -->
     <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
@@ -38,7 +39,7 @@
     .bgtopcard {
       background:#2b6777;
       color:#ffffff;
-      height: 50vh;
+      align-content:center;
     }
   
     .imageleftphone {
@@ -75,19 +76,21 @@
   /*Rightcard*/
     .bgrightcard {
       background: #c8d8e4 ;
+      height:50vh;
+      align-content: center;
     }
 
   </style>
 </head>
 
 <body class="bgbody">
-    <div class="bgtopcard topshadow position-relative overflow-hidden p-0 p-md-1 m-md-3 text-center">
+    <div class="bgtopcard topshadow position-relative overflow-hidden p-3 p-md-0 m-md-3 text-center">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-2 font-weight-normal"><span class="text-black"><b>Test</b></span><span class="text-white-50">2Impress</span></h1>
-        <p class="lead font-weight-normal">We test software.</p>
-        <p class="lead font-weight-normal">From websites to mainframe applications, from integrations to mobile solutions. Software testing is necessary because we all make mistakes and those mistakes can be expensive and potentially dangerous, harming your or your company’s reputation.</p>
-        <p class="lead font-weight-normal">This is where <b>Test2Impress</b> steps in.</p>
-        <a href="{% url 'test' %}"><button class="btn-lg btn-danger">Testing consultancy</button></a>
+        <h1 class="display-2 fw-normal"><span class="text-black"><b>Test</b></span><span class="text-white-50">2Impress</span></h1>
+        <p class="lead fw-normal">We test software.</p>
+        <p class="lead fw-normal">From websites to mainframe applications, from integrations to mobile solutions. Software testing is necessary because we all make mistakes and those mistakes can be expensive and potentially dangerous, harming your or your company’s reputation.</p>
+        <p class="lead fw-normal">This is where <b>Test2Impress</b> steps in.</p>
+        <a href="{% url 'test' %}"><button class="btn-lg btn-primary">Testing consultancy</button></a>
       </div>
       <div class="product-device box-shadow d-none d-md-block"><img class="imagerightphone" src="{% static 'Miniwebsite.jpg' %}"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"><img class="imageleftphone" src="{% static 'mainframe.jpg' %}"></div>
@@ -99,15 +102,17 @@
         <div class="my-1 py-1">
           <h2 class="display-4 text-black-50">Test2<span class="text-black"><b>Impress</b></span></h2>
           <p class="lead">Impress your customers : let us design & create your website!</p>
-              <a href="{% url 'web' %}"><button class="btn-lg btn-warning">Website design</button></a>
+          <a href="{% url 'web' %}"><button class="mt-3 btn-lg btn-primary">Website design</button></a>
+              <div class="bg-light shadow-sm mx-auto mt-5" style="width: 80%; max-width: 500px; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
       </div>
 
       <div class="bgrightcard topshadow mr-md-3 py-5 mx-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
         <div class="my-1 py-1">
           <h2 class="display-4"><span class="text-black-50">Test</span><span class="text-black"><b>2</b></span><span class="text-black-50">Impress</span></h2>
-          <p class="lead text-dark">It always takes 2 to tango so ... get to know us!                                                        </p>
-          <a href="{% url 'who' %}"><button class="btn-lg btn-primary">Who are we?</button></a>
+          <p class="lead text-dark">It always takes 2 to tango so ... get to know us!</p>
+          <a href="{% url 'who' %}"><button class="mt-3 btn-lg btn-primary">Who are we?</button></a>
+          <div class="bg-dark shadow-sm mx-auto mt-5" style="width: 80%; max-width: 500px; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
         
       </div>
@@ -119,9 +124,9 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="../../assets/js/vendor/popper.min.js"></script>
-  <script src="../../dist/js/bootstrap.min.js"></script>
-  <script src="../../assets/js/vendor/holder.min.js"></script>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://getbootstrap.com/docs/5.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://getbootstrap.com/assets/js/vendor/holder.min.js"></script>
   <script>
     Holder.addTheme('thumb', {
       bg: '#55595c',
