--- a/Test2Impress/templates/base.html
+++ b/Test2Impress/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Test2Impress - Overview of our services">
     <meta name="author" content="Test2Impress">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-16x16.png">
+    <link rel="icon" href="{% static 'Webistebg.gif' %}">
 
     <title>Test2Impress</title>
 
