--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -1,12 +1,13 @@
-
 <!doctype html>
 <html lang="en" class="h-100">
+  {% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Test2Impress - Our Logo">
     <meta name="author" content="Test2Impress">
     <meta name="generator" content="Hugo 0.88.1">
+    <link rel="icon" href="{% static 'Webistebg.gif' %}">
     <title>Test2Impress</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">
