--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -524,23 +524,17 @@ img {
             </div>
           </div>
           {% endfor %}
-          <div class="js-timeline_item ag-timeline_item">
-            <div class="ag-timeline-card_box">
-              <div class="js-timeline-card_point-box ag-timeline-card_point-box">
-                <div class="ag-timeline-card_point">2009</div>
-              </div>
-            </div>
-          </div>
         </div>
   </section>
 <section class="bottombanner py-1 text-center">
   <div>
-    <h3>Since you made it all the way down, here are some testimonials from previous projects:</h3>
+    <h3>Here are some testimonials from previous projects:</h3>
     <br/>       
     <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"A fantastic, result driven expert tester and test coordinator."</b></i></p>
     <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"I really enjoyed working with him for his skills and quality of deliverables but mostly for his superb attitude and great team spirit."</b></i></p>
     <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"Pieter has shown to be a team player and a quick learner. He also possesses a great hands on mentality. His positive attitude and energy has made it a pleasure to work with him."</b></i></p>
     <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"A must-have when you’re assembling a high-end project team and expect nothing but the best"</b></i></p>
+    <br/>
   </div>
 </section>
 </div>
