--- a/Test2Impress/templates/base.html
+++ b/Test2Impress/templates/base.html
@@ -40,6 +40,7 @@
             color:#ffffff;
             width:100%;
             text-align: center;
+            box-shadow: 0px -10px 10px #000000a2;
         }
 
         .afooter {
