--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -186,7 +186,7 @@
   <main>
     <div class="bgbody container py-4">
 
-      <div class="p-5 py-1 mb-4 bg-light rounded-3">
+      <div class="p-5 py-1 mt-3 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
           <iframe class="cardborder"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2506.849373243747!2d3.7271666159130907!3d51.07433055009507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3712618725cc7%3A0xd536d97ba53cccd!2sOslostraat%209%2C%209000%20Gent!5e0!3m2!1snl!2sbe!4v1643126836897!5m2!1snl!2sbe"
