--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -2,18 +2,11 @@
 {% block content %}
 <!doctype html>
 <html lang="en">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="Test2Impress">
-<title>Test2Impress - Testing</title>
 
 <link href="https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css" type="stylesheet">
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!-- FontAwesome Kit -->
-<script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
 {% load static %}
 <head>
 <style>
@@ -157,7 +150,8 @@ img {
 /*Kleur "lege" timeline*/
 .ag-timeline_line-progress {
   width: 100%;
-  height: 20%;
+  height: 20vh;
+  top: 50vh;
   background-color: #c8d8e4 ;
 }
 
@@ -542,7 +536,10 @@ img {
 </body>
   <!--ButtonToTop -->
   <a href="{% url 'test' %}#top"><i id="buttontotop" class="fas fa-angle-double-up"><p class="lead">Back to top</p></i></a>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<!-- Script voor timeline -->
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script>
 (function ($) {
   $(function () {
