--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -83,8 +83,7 @@
     }
 
     .cardborder {
-      box-shadow: 20px 20px 15px #2c3540;
-      float: right;
+
     }
 
     .cardimgyourweb {
@@ -178,6 +177,21 @@
         margin-top: 0;
       }
 
+    .map-responsive{
+      padding-bottom:25%;
+      height:0;
+      float: right;
+    }
+
+    .map-responsive iframe{
+      height:600;
+      width:375;
+      position:relative;
+      top:10%;
+      right:5%;
+      box-shadow: 20px 20px 15px #2c3540;
+    }
+
   </style>
 </head>
 
@@ -188,10 +202,11 @@
 
       <div class="p-5 py-1 mt-3 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
+          <div class="d-none d-sm-block map-responsive">
           <iframe class="cardborder"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2506.849373243747!2d3.7271666159130907!3d51.07433055009507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3712618725cc7%3A0xd536d97ba53cccd!2sOslostraat%209%2C%209000%20Gent!5e0!3m2!1snl!2sbe!4v1643126836897!5m2!1snl!2sbe"
-            width="600" height="375" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe>
-          <h1 class="display-5 fw-bold">Contact us</h1>
+            width="600" height="375" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe></div>
+          <h1 class="pt-3 display-5 fw-bold">Contact us</h1>
           <br />
           <p class="col-md-8 fs-4"><i class="fas fa-envelope"></i> : {{who.whoemail}}</p>
           <br />
@@ -243,11 +258,5 @@
       {% endfor %}
   </main>
 </body>
-  <!-- Scripts -->
-  <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
 </html>
 {% endblock %}
