--- a/Test2Impress/templates/base.html
+++ b/Test2Impress/templates/base.html
@@ -82,8 +82,8 @@
 <body>
     <nav id="menu" class="navbar navbarbg navbarshadow px-5 navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="fs-2 navbar-brand" href="{% url 'home' %}"><img class="navbarlogo ps-0" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="fs-3 navbar-brand" href="{% url 'home' %}"><img class="navbarlogo ps-0" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
+            <button class="navbar-toggler float-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
