--- a/pasttest/templates/pasttest/test.html
+++ b/pasttest/templates/pasttest/test.html
@@ -9,6 +9,7 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% load static %}
 <head>
+  <script src="https://kit.fontawesome.com/6d7547a687.js" crossorigin="anonymous"></script>
 <style>
   /* Body */
 body {
@@ -525,10 +526,10 @@ img {
   <div>
     <h3>Here are some testimonials from previous projects:</h3>
     <br/>       
-    <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"A fantastic, result driven expert tester and test coordinator."</b></i></p>
-    <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"I really enjoyed working with him for his skills and quality of deliverables but mostly for his superb attitude and great team spirit."</b></i></p>
-    <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"Pieter has shown to be a team player and a quick learner. He also possesses a great hands on mentality. His positive attitude and energy has made it a pleasure to work with him."</b></i></p>
-    <p class="ps-5 text-start text-white lead"><i class="pe-5 fas fa-comments"></i><i><b>"A must-have when you’re assembling a high-end project team and expect nothing but the best"</b></i></p>
+    <p class="ps-5 text-start text-white lead"><i class="fa-solid fa-comments"></i><i><b>"A fantastic, result driven expert tester and test coordinator."</b></i></p>
+    <p class="ps-5 text-start text-white lead"><i class="fa-solid fa-comments"></i><i><b>"I really enjoyed working with him for his skills and quality of deliverables but mostly for his superb attitude and great team spirit."</b></i></p>
+    <p class="ps-5 text-start text-white lead"><i class="fa-solid fa-comments"></i><i><b>"Pieter has shown to be a team player and a quick learner. He also possesses a great hands on mentality. His positive attitude and energy has made it a pleasure to work with him."</b></i></p>
+    <p class="ps-5 text-start text-white lead"><i class="fa-solid fa-comments"></i><i><b>"A must-have when you’re assembling a high-end project team and expect nothing but the best"</b></i></p>
     <br/>
   </div>
 </section>
