--- a/who/templates/who/who.html
+++ b/who/templates/who/who.html
@@ -11,16 +11,14 @@
   <meta name="description" content="">
   <meta name="author" content="Test2Impress">
   <title>Test2Impress - About</title>
-
+  <script src="https://kit.fontawesome.com/6d7547a687.js" crossorigin="anonymous"></script>
   <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-  <!-- FontAwesome Kit -->
-  <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
-
+  
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -80,10 +78,6 @@
       background-color: #d4d9c1;
       border-color: #7d8c84;
       box-shadow: 5px 15px 20px #2c3540;
-    }
-
-    .cardborder {
-
     }
 
     .cardimgyourweb {
@@ -208,7 +202,7 @@
             width="600" height="375" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe></div>
           <h1 class="pt-3 display-5 fw-bold">Contact us</h1>
           <br />
-          <p class="col-md-8 fs-4"><i class="fas fa-envelope"></i> : {{who.whoemail}}</p>
+          <p class="col-md-8 fs-4"><i class="fa-solid fa-envelope"></i> : {{who.whoemail}}</p>
           <br />
           <p class="col-md-8 fs-4"><i class="fas fa-phone"></i> : {{who.whophone}}</p>
           <br />
